...
                                <rect key="frame" x="192" y="290" width="217" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="JWv-Va-hZV"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <inset key="contentEdgeInsets" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                <state key="normal" title="Payform Scanner Demo">
                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <segue destination="OcF-Ne-jQP" kind="show" id="aIA-Ws-a7p"/>
                                </connections>
                            </button>
...
