...
    @IBOutlet var tableView: UITableView!
    
    private var itemProvider: MainTableViewItemProvider!

    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Scanbot SDK Demo"
        guard let navigationController = navigationController else {
            fatalError("Missing UINavigationController.")
        }
        navigationController.delegate = self
        let actionHandler = MainTableActionHandler(presenter: navigationController)
        itemProvider = MainTableViewItemProvider(actionHandler: actionHandler)
...
